# kNN

./: CMakeLists.txt  README.md
script/: read_bmp.py
src/: BmpPictureInfo.cpp  BmpPictureInfo.h  CMakeLists.txt  DataProcessor  DataProcessor.cpp  DataProcessor.h  Makefile  PictureInfo.cpp  PictureInfo.h  kNN  main.cpp
src/SLDLib/: CMakeLists.txt
src/SLDLib/include/: SLDConfig.h  SLDConfig.h~  SLDString.h  SLDString.h~
src/SLDLib/src/: CMakeLists.txt  CMakeLists.txt~
src/SLDLib/src/CommonStruct/: CMakeLists.txt  CMakeLists.txt~  SLDString.cpp  SLDString.cpp~
src/SLDLib/src/CommonTools/: CMakeLists.txt  SLDConfig.cpp  SLDConfig.cpp~
src/app/: CMakeLists.txt  CMakeLists.txt~  DataProcessor.cpp  DataProcessor.cpp~  DataProcessor.h  LabeledDataProcessor.cpp  LabeledDataProcessor.h  PictureInfo.cpp  PictureInfo.h  main.cpp
src/knn/: CMakeLists.txt  CMakeLists.txt~  LabeledKnn.cpp  LabeledKnn.h  TrainData.h  knn.cpp  knn.cpp~  knn.h
src/mylib/: CMakeLists.txt  CMakeLists.txt~  mylib.cpp  mylib.cpp~  mylib.h  mylib.h~
